added auth cookies